version 2 changement @IP depuis interface